<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_373b3e"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.lenovo.csd.eservice.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_70dp"
        android:background="@color/black_373b3e"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_atdoor_toolbox"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_75dp"
            android:background="@drawable/lenovo_logo" />

        <EditText
            android:id="@+id/edit_loginAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_65dp"
            android:layout_marginLeft="@dimen/layout_25dp"
            android:layout_marginRight="@dimen/layout_25dp"
            android:layout_marginTop="@dimen/layout_75dp"
            android:background="@drawable/shape_4dpcorner_white_bg"
            android:gravity="center_vertical"
            android:hint="@string/text_engineer_id"
            android:paddingLeft="@dimen/layout_18dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_cccccc"
            android:textSize="@dimen/text_23sp" />

        <EditText
            android:id="@+id/edit_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_65dp"
            android:layout_marginLeft="@dimen/layout_25dp"
            android:layout_marginRight="@dimen/layout_25dp"
            android:layout_marginTop="@dimen/layout_25dp"
            android:background="@drawable/shape_4dpcorner_white_bg"
            android:gravity="center_vertical"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/layout_18dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_cccccc"
            android:textSize="@dimen/text_23sp" />

        <Button
            android:id="@+id/btn_login"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_65dp"
            android:layout_marginLeft="@dimen/layout_25dp"
            android:layout_marginRight="@dimen/layout_25dp"
            android:layout_marginTop="@dimen/layout_25dp"
            android:background="@drawable/selector_bg_redbtn"
            android:gravity="center"
            android:text="@string/text_login"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_24sp" />

        <TextView
            android:id="@+id/text_versionLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="@dimen/layout_25dp"
            android:text="@string/text_app_version"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/text_15sp" />
    </LinearLayout>
</LinearLayout>
