<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_373b3e"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.lenovo.csd.eservice.activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_70dp"
        android:background="@color/black_373b3e">

        <RelativeLayout
            android:id="@+id/relative_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_bg_draweritem"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/layout_25dp"
            android:paddingRight="@dimen/layout_25dp"
            >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/layout_15dp"
                android:layout_height="@dimen/layout_25dp"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_back" />

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_10dp"
                android:layout_toRightOf="@id/img_back"
                android:text="@string/text_about"
                android:textColor="@color/white_ffffff"
                android:textSize="@dimen/text_24sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_normal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/layout_113dp"
            android:layout_height="@dimen/layout_113dp"
            android:layout_marginTop="@dimen/layout_55dp"
            android:background="@drawable/icon_applogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_25dp"
            android:text="@string/app_name"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/text_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_10dp"
            android:text="@string/text_current_appversion"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>
</LinearLayout>
