<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_20dp"
            android:paddingLeft="@dimen/layout_36dp"
            android:paddingTop="@dimen/layout_20dp">

            <ImageView
                android:id="@+id/img_attachItem"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_113dp"
                android:layout_weight="1.0"
                android:background="@drawable/default_load_img"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:orientation="vertical"
                android:paddingLeft="@dimen/layout_25dp"
                android:paddingRight="@dimen/layout_25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_order_id"
                        android:textColor="@color/gray_999999"
                        android:textSize="@dimen/text_16sp" />

                    <TextView
                        android:id="@+id/text_orderId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/gray_666666"
                        android:textSize="@dimen/text_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_attach_type"
                        android:textColor="@color/gray_999999"
                        android:textSize="@dimen/text_16sp" />

                    <TextView
                        android:id="@+id/text_attachType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/gray_666666"
                        android:textSize="@dimen/text_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_attach_size"
                        android:textColor="@color/gray_999999"
                        android:textSize="@dimen/text_16sp" />

                    <TextView
                        android:id="@+id/text_attachSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/gray_666666"
                        android:textSize="@dimen/text_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_uploadAttach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_redbtn"
                        android:paddingBottom="@dimen/layout_10dp"
                        android:paddingLeft="@dimen/layout_36dp"
                        android:paddingRight="@dimen/layout_36dp"
                        android:paddingTop="@dimen/layout_10dp"
                        android:text="@string/text_upload"
                        android:textColor="@color/white_ffffff"
                        android:textSize="@dimen/text_15sp" />

                    <TextView
                        android:id="@+id/text_deleteAttach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_10dp"
                        android:background="@drawable/selector_bg_graybtn"
                        android:paddingBottom="@dimen/layout_10dp"
                        android:paddingLeft="@dimen/layout_36dp"
                        android:paddingRight="@dimen/layout_36dp"
                        android:paddingTop="@dimen/layout_10dp"
                        android:text="@string/text_delete"
                        android:textColor="@color/white_ffffff"
                        android:textSize="@dimen/text_15sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_20dp"
        android:background="@color/color_F4F4F4"></LinearLayout>
</LinearLayout>