<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_373b3e"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_70dp"
        android:background="@color/black_373b3e">

        <RelativeLayout
            android:id="@+id/relative_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_bg_draweritem"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/layout_25dp"
            android:paddingRight="@dimen/layout_25dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/layout_15dp"
                android:layout_height="@dimen/layout_25dp"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_back" />

            <TextView
                android:id="@+id/textShowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_13dp"
                android:layout_toRightOf="@id/img_back"
                android:text="@string/text_device_moreinfo"
                android:textColor="@color/white_ffffff"
                android:textSize="@dimen/text_24sp" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearTabs"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_70dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/orders_unfinished_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/relative_MachineInfoTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/img_machineInfo"
                        android:layout_width="@dimen/layout_20dp"
                        android:layout_height="@dimen/layout_20dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_machineinfo_selected" />

                    <TextView
                        android:id="@+id/text_MachineInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/layout_10dp"
                        android:layout_toRightOf="@id/img_machineInfo"
                        android:gravity="center"
                        android:text="@string/text_hostmachine_info"
                        android:textColor="@color/red_E47B78"
                        android:textSize="@dimen/text_20sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_machineInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_2dp"
                    android:background="@color/red_E47B78" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/orders_finished_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/relative_FillBoxTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/img_orderBox"
                        android:layout_width="@dimen/layout_20dp"
                        android:layout_height="@dimen/layout_20dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_boxorder_normal" />

                    <TextView
                        android:id="@+id/text_fillBoxOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/layout_10dp"
                        android:layout_toRightOf="@id/img_orderBox"
                        android:text="@string/text_fillbox_order"
                        android:textColor="@color/gray_cccccc"
                        android:textSize="@dimen/text_20sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/text_fillBoxLine"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_2dp"
                    android:background="@color/gray_F8F8F8" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_machineMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:visibility="gone"></FrameLayout>
    </LinearLayout>
</LinearLayout>


